fix after review #1